--- a/pipeline/extract_edits.ipynb
+++ b/pipeline/extract_edits.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set your username here - use it consistently across all resources\n",
-    "USERNAME = \"<username>\""
+    "USERNAME = \"konatantinos\""
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requesting REST API URL: https://wikimedia.org/api/rest_v1/metrics/edited-pages/top-by-edits/en.wikipedia/user/content/2025/11/26\n",
+      "Wikipedia REST API Response body: {\"items\":[{\"project\":\"en.wikipedia\",\"editor-type\":\"user\",\"page-type\":\"content\",\"granularity\":\"daily\",\"results\":[{\"timestamp\":\"2025-11-26T00:00:00.000Z\",\"top\":[{\"page_title\":\"Wang_Fuk_Court_fire\",\"edits\":263,\"rank\":1},{\"page_title\":\"John_Entwistle\",\"edits\":205,\"rank\":2},{\"page_title\":\"Augustus\",\"edits\":152,\"rank\":3},{\"page_title\":\"2025_Guinea-Bissau_coup_d'état\",\"edits\":132,\"rank\":4},{\"page_title\":\"Cyprus_Basketball_Division_A\",\"edits\":119,\"rank\":5},{\"page_title\":\"2026_AFC_U-17_Asian_Cup_qualific...\n",
+      "Wikipedia REST API Response Code: 200\n",
+      "Successfully retrieved Wikipedia data, content-length: 6601\n"
+     ]
+    }
+   ],
    "source": [
     "# Try different dates to see how the data changes\n",
-    "DATE_PARAM = \"2025-11-25\"\n",
+    "DATE_PARAM = \"2025-11-26\"\n",
     "\n",
     "date = datetime.datetime.strptime(DATE_PARAM, \"%Y-%m-%d\")\n",
     "\n",
@@ -108,9 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformed 100 records to JSON Lines\n",
+      "First few lines:\n",
+      "{\"title\": \"Wang_Fuk_Court_fire\", \"edits\": 263, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
+      "{\"title\": \"John_Entwistle\", \"edits\": 205, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
+      "{\"title\": \"Augustus\", \"edits\": 152, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
+      "{\"title\": \"2025_Guinea-Bissau_coup_d'\\u00e9tat\", \"edits\": 132, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
+      "{\"title\": \"Cyprus_Basketball_Division_A\"...\n"
+     ]
+    }
+   ],
    "source": [
     "# Parse the API response and extract top edits\n",
     "wiki_response_parsed = wiki_server_response.json()\n",
@@ -150,18 +175,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using existing bucket: konatantinos-wikidata\n"
+     ]
+    }
+   ],
    "source": [
-    "S3_WIKI_BUCKET = \"<your-username>-wikidata\"\n",
+    "S3_WIKI_BUCKET = USERNAME + \"-wikidata\"\n",
     "s3 = boto3.client(\"s3\")\n",
     "\n",
     "bucket_names = [bucket[\"Name\"] for bucket in s3.list_buckets()[\"Buckets\"]]\n",
     "if S3_WIKI_BUCKET not in bucket_names:\n",
     "    # LAB 1: Create the bucket if it doesn't exist\n",
     "    # YOUR SOLUTION COMES HERE =========================\n",
-    "\n",
+    "    s3.create_bucket(\n",
+    "        Bucket=S3_WIKI_BUCKET,\n",
+    "        CreateBucketConfiguration={\"LocationConstraint\": boto3.session.Session().region_name},\n",
+    "    )\n",
     "    # ==================================================\n",
     "    print(f\"Created new bucket: {S3_WIKI_BUCKET}\")\n",
     "else:\n",
@@ -170,9 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket konatantinos-wikidata exists!\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Lab 1\n",
     "assert USERNAME != \"<username>\", \"Please set your USERNAME at the top of the notebook\"\n",
@@ -207,21 +251,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'F35GPZZBX8EGY03T',\n",
+       "  'HostId': 'lUmW03O8Vsg9VYH72sMAntfILRIREfGiVAcPqomYAQcP0KHi6epIAlk6hmzUz66qI9jrE4n3g6o=',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'lUmW03O8Vsg9VYH72sMAntfILRIREfGiVAcPqomYAQcP0KHi6epIAlk6hmzUz66qI9jrE4n3g6o=',\n",
+       "   'x-amz-request-id': 'F35GPZZBX8EGY03T',\n",
+       "   'date': 'Wed, 10 Dec 2025 16:02:30 GMT',\n",
+       "   'x-amz-server-side-encryption': 'AES256',\n",
+       "   'etag': '\"9335c880b58c0fc945d6338a398c7003\"',\n",
+       "   'x-amz-checksum-crc32': 'Z5EDbg==',\n",
+       "   'x-amz-checksum-type': 'FULL_OBJECT',\n",
+       "   'content-length': '0',\n",
+       "   'server': 'AmazonS3'},\n",
+       "  'RetryAttempts': 0},\n",
+       " 'ETag': '\"9335c880b58c0fc945d6338a398c7003\"',\n",
+       " 'ChecksumCRC32': 'Z5EDbg==',\n",
+       " 'ChecksumType': 'FULL_OBJECT',\n",
+       " 'ServerSideEncryption': 'AES256'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LAB 2: Upload json_lines directly to S3\n",
     "# YOUR SOLUTION COMES HERE =========================\n",
-    "\n",
+    "s3_key = f\"raw-edits/raw-edits-{DATE_PARAM}.json\"\n",
+    "s3.put_object(  \n",
+    "    Bucket=S3_WIKI_BUCKET,\n",
+    "    Key=s3_key,\n",
+    "    Body=json_lines,\n",
+    ")\n",
     "# =================================================="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File uploaded successfully to s3://konatantinos-wikidata/raw-edits/raw-edits-2025-11-26.json\n"
+     ]
+    }
+   ],
    "source": [
     "# Test Lab 2\n",
     "expected_key = f\"raw-edits/raw-edits-{date.strftime('%Y-%m-%d')}.json\"\n",
@@ -241,8 +325,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
