Added my New changes

--- a/pipeline/extract_edits.ipynb
+++ b/pipeline/extract_edits.ipynb
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set your username here - use it consistently across all resources\n",
-    "USERNAME = \"konatantinos\""
+    "USERNAME = \"konstantinos\""
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
       "Requesting REST API URL: https://wikimedia.org/api/rest_v1/metrics/edited-pages/top-by-edits/en.wikipedia/user/content/2025/11/26\n",
       "Wikipedia REST API Response body: {\"items\":[{\"project\":\"en.wikipedia\",\"editor-type\":\"user\",\"page-type\":\"content\",\"granularity\":\"daily\",\"results\":[{\"timestamp\":\"2025-11-26T00:00:00.000Z\",\"top\":[{\"page_title\":\"Wang_Fuk_Court_fire\",\"edits\":263,\"rank\":1},{\"page_title\":\"John_Entwistle\",\"edits\":205,\"rank\":2},{\"page_title\":\"Augustus\",\"edits\":152,\"rank\":3},{\"page_title\":\"2025_Guinea-Bissau_coup_d'état\",\"edits\":132,\"rank\":4},{\"page_title\":\"Cyprus_Basketball_Division_A\",\"edits\":119,\"rank\":5},{\"page_title\":\"2026_AFC_U-17_Asian_Cup_qualific...\n",
       "Wikipedia REST API Response Code: 200\n",
-      "Successfully retrieved Wikipedia data, content-length: 6601\n"
+      "Successfully retrieved Wikipedia data, content-length: 6634\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,10 +128,10 @@
      "text": [
       "Transformed 100 records to JSON Lines\n",
       "First few lines:\n",
-      "{\"title\": \"Wang_Fuk_Court_fire\", \"edits\": 263, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
-      "{\"title\": \"John_Entwistle\", \"edits\": 205, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
-      "{\"title\": \"Augustus\", \"edits\": 152, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
-      "{\"title\": \"2025_Guinea-Bissau_coup_d'\\u00e9tat\", \"edits\": 132, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-10T16:02:29.084826\"}\n",
+      "{\"title\": \"Wang_Fuk_Court_fire\", \"edits\": 263, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-11T12:21:17.802763\"}\n",
+      "{\"title\": \"John_Entwistle\", \"edits\": 205, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-11T12:21:17.802763\"}\n",
+      "{\"title\": \"Augustus\", \"edits\": 152, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-11T12:21:17.802763\"}\n",
+      "{\"title\": \"2025_Guinea-Bissau_coup_d'\\u00e9tat\", \"edits\": 132, \"date\": \"2025-11-26\", \"retrieved_at\": \"2025-12-11T12:21:17.802763\"}\n",
       "{\"title\": \"Cyprus_Basketball_Division_A\"...\n"
      ]
     }
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using existing bucket: konatantinos-wikidata\n"
+      "Using existing bucket: konstantinos-wikidata\n"
      ]
     }
    ],
@@ -206,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bucket konatantinos-wikidata exists!\n"
+      "Bucket konstantinos-wikidata exists!\n"
      ]
     }
    ],
@@ -251,32 +251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ResponseMetadata': {'RequestId': 'F35GPZZBX8EGY03T',\n",
-       "  'HostId': 'lUmW03O8Vsg9VYH72sMAntfILRIREfGiVAcPqomYAQcP0KHi6epIAlk6hmzUz66qI9jrE4n3g6o=',\n",
+       "{'ResponseMetadata': {'RequestId': 'V73KH7KQ9ZBTT5Y3',\n",
+       "  'HostId': 'Bbyi8jm0AvGP44BTNcuvnPRsImne95QfR7/wchJoFvikotvKJ514GbYWGN616ELv5vW8HINvThC+aNlvqiYfcASil/hyQYcr7Fh8CQHbPGs=',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amz-id-2': 'lUmW03O8Vsg9VYH72sMAntfILRIREfGiVAcPqomYAQcP0KHi6epIAlk6hmzUz66qI9jrE4n3g6o=',\n",
-       "   'x-amz-request-id': 'F35GPZZBX8EGY03T',\n",
-       "   'date': 'Wed, 10 Dec 2025 16:02:30 GMT',\n",
+       "  'HTTPHeaders': {'x-amz-id-2': 'Bbyi8jm0AvGP44BTNcuvnPRsImne95QfR7/wchJoFvikotvKJ514GbYWGN616ELv5vW8HINvThC+aNlvqiYfcASil/hyQYcr7Fh8CQHbPGs=',\n",
+       "   'x-amz-request-id': 'V73KH7KQ9ZBTT5Y3',\n",
+       "   'date': 'Thu, 11 Dec 2025 12:21:19 GMT',\n",
        "   'x-amz-server-side-encryption': 'AES256',\n",
-       "   'etag': '\"9335c880b58c0fc945d6338a398c7003\"',\n",
-       "   'x-amz-checksum-crc32': 'Z5EDbg==',\n",
+       "   'etag': '\"519d82c7661d43acfd5fd252e7fe6d62\"',\n",
+       "   'x-amz-checksum-crc32': 'kF9nww==',\n",
        "   'x-amz-checksum-type': 'FULL_OBJECT',\n",
        "   'content-length': '0',\n",
        "   'server': 'AmazonS3'},\n",
        "  'RetryAttempts': 0},\n",
-       " 'ETag': '\"9335c880b58c0fc945d6338a398c7003\"',\n",
-       " 'ChecksumCRC32': 'Z5EDbg==',\n",
+       " 'ETag': '\"519d82c7661d43acfd5fd252e7fe6d62\"',\n",
+       " 'ChecksumCRC32': 'kF9nww==',\n",
        " 'ChecksumType': 'FULL_OBJECT',\n",
        " 'ServerSideEncryption': 'AES256'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File uploaded successfully to s3://konatantinos-wikidata/raw-edits/raw-edits-2025-11-26.json\n"
+      "File uploaded successfully to s3://konstantinos-wikidata/raw-edits/raw-edits-2025-11-26.json\n"
      ]
     }
    ],
